--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <div class="box">
-    <h1>山田まゆ</h1>
+    <h1>山田真由</h1>
     <p>大学院生（情報工学専攻）。手書き文字解析やフォント変換の研究をしています。</p>
     <p>🌏 海外インターンやTA活動にも参加し、グローバルIT人材を目指しています。</p>
     <p>🎓 現在、修士1年目。学術研究と実社会の架け橋を目指して日々挑戦中！</p>
