--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mayu Yamada - Profile</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>山田真由 - 自己紹介</title>
   <style>
     body {
       font-family: sans-serif;
@@ -11,25 +11,75 @@
       padding: 2em;
       line-height: 1.6;
     }
-    h1 {
-      color: #333;
-    }
-    .box {
-      background: #fff;
-      padding: 1.5em;
+    .container {
+      max-width: 800px;
+      background-color: #fff;
+      margin: auto;
+      padding: 2em;
       border-radius: 10px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      max-width: 600px;
-      margin: auto;
+    }
+    h1, h2 {
+      color: #333;
+      border-bottom: 2px solid #ccc;
+      padding-bottom: 0.3em;
+    }
+    img.profile {
+      border-radius: 50%;
+      width: 120px;
+      height: 120px;
+      display: block;
+      margin-bottom: 1em;
+    }
+    ul {
+      padding-left: 1.2em;
     }
   </style>
 </head>
 <body>
-  <div class="box">
+  <div class="container">
     <h1>山田真由</h1>
-    <p>大学院生（情報工学専攻）。手書き文字解析やフォント変換の研究をしています。</p>
-    <p>🌏 海外インターンやTA活動にも参加し、グローバルIT人材を目指しています。</p>
-    <p>🎓 現在、修士1年目。学術研究と実社会の架け橋を目指して日々挑戦中！</p>
+    <img class="profile" src="https://avatars.githubusercontent.com/MayuYamada2024" alt="GitHubプロフィール画像" />
+
+    <h2>基本情報</h2>
+    <p>東京都市大学大学院 総合理工学研究科 情報専攻 博士前期課程1年</p>
+    <p>産業システム研究室（神野研究室）所属</p>
+    <p>📧 <a href="mailto:g2581460@tcu.ac.jp">g2581460@tcu.ac.jp</a></p>
+
+    <h2>経歴</h2>
+    <ul>
+      <li>2018年4月 東京都立戸山高等学校 入学</li>
+      <li>2021年3月 東京都立戸山高等学校　卒業</li>
+      <li>2021年4月 東京都市大学 情報工学部知能情報工学科国際コース 入学</li>
+      <li>2022年8月 オーストラリア Edith Cowan University へ4か月間留学</li>
+      <li>2023年2月 紀伊国屋書店タイ支部で1か月間インターンシップ</li>
+      <li>2023年8月 応用社会科学RAブートキャンプ参加</li>
+      <li>2023年11月 さくらサイエンスプログラムTAとしてタイ・インドの学生の指導補助</li>
+      <li>2024年7月 さくらサイエンスプログラムTAとして台湾の学生の指導補助</li>
+      <li>2024年8月 東京都市大学塩尻高校　情報の特別授業の指導補助</li>
+      <li>2024年8月 エジプト Egypt-Japan University of Science and Technology主催 ２種間サマーキャンプ参加</li>
+      <li>2024年11月 東北大学電気通信研究所 共同プロジェクト 研究合同研究会参加（ポスター発表）</li>
+      <li>2024年11月 さくらサイエンスプログラムTAとしてタイの学生の指導補助</li>
+      <li>2025年3月 東京都市大学 情報工学部知能情報工学科国際コース 卒業</li>
+      <li>2025年4月 東京都市大学大学院 総合知工学研究科情報専攻 入学</li>
+      <li>2025年5月 東京都市大学大学院 総合理工学研究科情報専攻　在学中</li>
+    </ul>
+
+    <h2>資格</h2>
+    <ul>
+      <li>普通自動車第一種運転免許（AT限定）</li>
+      <li>TOEIC Listening & Reading 845点</li>
+      <li>IELTS OA 5.5 (L 5.0 / R 5.5 / W 6.0 / S 5.5)</li>
+      <li>日本習字漢字部 高等師範免許（4段）</li>
+    </ul>
+
+    <h2>趣味</h2>
+    <ul>
+      <li>博物館・美術館巡り</li>
+      <li>世界遺産巡り</li>
+      <li>オペラ鑑賞</li>
+      <li>書道</li>
+    </ul>
   </div>
 </body>
 </html>
