--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 <body>
   <div class="container">
     <h1>山田真由</h1>
-    <img class="profile" src="https://avatars.githubusercontent.com/MayuYamada2024" alt="GitHubプロフィール画像" />
-
+    <img class="profile" src="https://avatars.githubusercontent.com/u/165368208?v=4" alt="GitHubプロフィール画像" />
+    
     <h2>基本情報</h2>
     <p>東京都市大学大学院 総合理工学研究科 情報専攻 博士前期課程1年</p>
     <p>産業システム研究室（神野研究室）所属</p>
