--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <li>2023年11月 さくらサイエンスプログラムTAとしてタイ・インドの学生の指導補助</li>
       <li>2024年7月 さくらサイエンスプログラムTAとして台湾の学生の指導補助</li>
       <li>2024年8月 東京都市大学塩尻高校　情報の特別授業の指導補助</li>
-      <li>2024年8月 エジプト Egypt-Japan University of Science and Technology主催 ２種間サマーキャンプ参加</li>
+      <li>2024年8月 エジプト Egypt-Japan University of Science and Technology主催 2週間サマーキャンプ参加</li>
       <li>2024年11月 東北大学電気通信研究所 共同プロジェクト 研究合同研究会参加（ポスター発表）</li>
       <li>2024年11月 さくらサイエンスプログラムTAとしてタイの学生の指導補助</li>
       <li>2025年3月 東京都市大学 情報工学部知能情報工学科国際コース 卒業</li>
