経歴＋ポップアップ

--- a/index.html
+++ b/index.html
@@ -48,21 +48,21 @@
 
     <h2>経歴</h2>
     <ul>
-      <li>2018年4月 東京都立戸山高等学校 入学</li>
-      <li>2021年3月 東京都立戸山高等学校　卒業</li>
-      <li>2021年4月 東京都市大学 情報工学部知能情報工学科国際コース 入学</li>
-      <li>2022年8月 オーストラリア Edith Cowan University へ4か月間留学</li>
-      <li>2023年2月 紀伊国屋書店タイ支部で1か月間インターンシップ</li>
-      <li>2023年8月 応用社会科学RAブートキャンプ参加</li>
-      <li>2023年11月 さくらサイエンスプログラムTAとしてタイ・インドの学生の指導補助</li>
-      <li>2024年7月 さくらサイエンスプログラムTAとして台湾の学生の指導補助</li>
-      <li>2024年8月 東京都市大学塩尻高校　情報の特別授業の指導補助</li>
-      <li>2024年8月 エジプト Egypt-Japan University of Science and Technology主催 2週間サマーキャンプ参加</li>
-      <li>2024年11月 東北大学電気通信研究所 共同プロジェクト 研究合同研究会参加（ポスター発表）</li>
-      <li>2024年11月 さくらサイエンスプログラムTAとしてタイの学生の指導補助</li>
-      <li>2025年3月 東京都市大学 情報工学部知能情報工学科国際コース 卒業</li>
-      <li>2025年4月 東京都市大学大学院 総合知工学研究科情報専攻 入学</li>
-      <li>2025年5月 東京都市大学大学院 総合理工学研究科情報専攻　在学中</li>
+      <li title="SSH指定校での探究活動や模擬国連など多彩な課外活動を経験。">2018年4月 東京都立戸山高等学校 入学</li>
+      <li title="探究活動を通じて学術的な興味を深め、大学進学へ。">2021年3月 東京都立戸山高等学校　卒業</li>
+      <li title="英語による専門教育を受ける国際コースに所属。">2021年4月 東京都市大学 情報工学部知能情報工学科国際コース 入学</li>
+      <li title="オーストラリアの大学にて情報系科目を英語で履修。">2022年8月 オーストラリア Edith Cowan University へ4か月間留学</li>
+      <li title="海外実務の現場でマーケティングや業務体験を実施。">2023年2月 紀伊国屋書店タイ支部で1か月間インターンシップ</li>
+      <li title="AIと社会課題の交差点を探る実践型リサーチ。">2023年8月 応用社会科学RAブートキャンプ参加</li>
+      <li title="英語での技術指導および異文化対応力を発揮。">2023年11月 さくらサイエンスプログラムTAとしてタイ・インドの学生の指導補助</li>
+      <li title="Pythonや機械学習の授業運営を補助。">2024年7月 さくらサイエンスプログラムTAとして台湾の学生の指導補助</li>
+      <li title="高校の授業でICTリテラシー教育を担当。">2024年8月 東京都市大学塩尻高校　情報の特別授業の指導補助</li>
+      <li title="国際的な理工系学生との共同プロジェクトに参加。">2024年8月 エジプト Egypt-Japan University of Science and Technology主催 2週間サマーキャンプ参加</li>
+      <li title="大学間連携による研究成果の発表を経験。">2024年11月 東北大学電気通信研究所 共同プロジェクト 研究合同研究会参加（ポスター発表）</li>
+      <li title="再訪型TAとしてタイ学生との継続交流。">2024年11月 さくらサイエンスプログラムTAとしてタイの学生の指導補助</li>
+      <li title="研究と国際活動を両立した学部生活を総括。">2025年3月 東京都市大学 情報工学部知能情報工学科国際コース 卒業</li>
+      <li title="AIと社会実装に向けた専門的研究に取り組む。">2025年4月 東京都市大学大学院 総合知工学研究科情報専攻 入学</li>
+      <li title="修士課程で手書き文字解析とフォント変換の研究を継続中。">2025年5月 東京都市大学大学院 総合理工学研究科情報専攻　在学中</li>
     </ul>
 
     <h2>資格</h2>
