--- a/index.html
+++ b/index.html
@@ -30,9 +30,38 @@
       display: block;
       margin-bottom: 1em;
     }
-
     ul {
       padding-left: 1.2em;
+    }
+
+    /* ツールチップスタイル */
+    .tooltip {
+      position: relative;
+      cursor: help;
+    }
+
+    .tooltip .tooltiptext {
+      visibility: hidden;
+      background-color: #444;
+      color: #fff;
+      text-align: left;
+      padding: 6px 10px;
+      border-radius: 6px;
+      position: absolute;
+      z-index: 1;
+      bottom: 125%;
+      left: 0;
+      opacity: 0;
+      transition: opacity 0.3s;
+      font-size: 0.85em;
+      line-height: 1.4;
+      max-width: 300px;
+      white-space: normal;
+    }
+
+    .tooltip:hover .tooltiptext {
+      visibility: visible;
+      opacity: 1;
     }
   </style>
 </head>
@@ -48,21 +77,43 @@
 
     <h2>経歴</h2>
     <ul>
-      <li title="SSH指定校での探究活動や模擬国連など多彩な課外活動を経験。">2018年4月 東京都立戸山高等学校 入学</li>
-      <li title="探究活動を通じて学術的な興味を深め、大学進学へ。">2021年3月 東京都立戸山高等学校　卒業</li>
-      <li title="英語による専門教育を受ける国際コースに所属。">2021年4月 東京都市大学 情報工学部知能情報工学科国際コース 入学</li>
-      <li title="オーストラリアの大学にて情報系科目を英語で履修。">2022年8月 オーストラリア Edith Cowan University へ4か月間留学</li>
-      <li title="海外実務の現場でマーケティングや業務体験を実施。">2023年2月 紀伊国屋書店タイ支部で1か月間インターンシップ</li>
-      <li title="AIと社会課題の交差点を探る実践型リサーチ。">2023年8月 応用社会科学RAブートキャンプ参加</li>
-      <li title="英語での技術指導および異文化対応力を発揮。">2023年11月 さくらサイエンスプログラムTAとしてタイ・インドの学生の指導補助</li>
-      <li title="Pythonや機械学習の授業運営を補助。">2024年7月 さくらサイエンスプログラムTAとして台湾の学生の指導補助</li>
-      <li title="高校の授業でICTリテラシー教育を担当。">2024年8月 東京都市大学塩尻高校　情報の特別授業の指導補助</li>
-      <li title="国際的な理工系学生との共同プロジェクトに参加。">2024年8月 エジプト Egypt-Japan University of Science and Technology主催 2週間サマーキャンプ参加</li>
-      <li title="大学間連携による研究成果の発表を経験。">2024年11月 東北大学電気通信研究所 共同プロジェクト 研究合同研究会参加（ポスター発表）</li>
-      <li title="再訪型TAとしてタイ学生との継続交流。">2024年11月 さくらサイエンスプログラムTAとしてタイの学生の指導補助</li>
-      <li title="研究と国際活動を両立した学部生活を総括。">2025年3月 東京都市大学 情報工学部知能情報工学科国際コース 卒業</li>
-      <li title="AIと社会実装に向けた専門的研究に取り組む。">2025年4月 東京都市大学大学院 総合知工学研究科情報専攻 入学</li>
-      <li title="修士課程で手書き文字解析とフォント変換の研究を継続中。">2025年5月 東京都市大学大学院 総合理工学研究科情報専攻　在学中</li>
+      <li>2018年4月 東京都立戸山高等学校 入学</li>
+      <li>2021年3月 東京都立戸山高等学校　卒業</li>
+      <li>2021年4月 東京都市大学 情報工学部知能情報工学科国際コース 入学</li>
+      <li class="tooltip">2022年8月 オーストラリア Edith Cowan University へ4か月間留学
+        <span class="tooltiptext">Social, Cultural and Media Studies, Introductory Applied Mathmatics, Collaborative Design: Designing for Intercultural Experience, Improving English: Reading and Writing, Improving English: Speaking and Listeningを履修し、GPA3.921を取得。課外活動としてSouth West Festival of Japanの書道ブースリーダーとして関わったり、Thomo's Community Gardenへ週１回ボランティアとして農作業に従事。帰国後は成績優秀者として237名中上位7名が貰える「夢に翼を奨学金 留学プログラムアワード」を受賞。</span>
+      </li>
+      <li class="tooltip">2023年2月 紀伊国屋書店タイ支部で1か月間インターンシップ
+        <span class="tooltiptext">営業部に同行して顧客インタビューをしたり、店舗やロジスティクスで実際の業務に従事することで海外進出する日系企業がどう他の企業と差別化しているのか発見した。</span>
+      </li>
+      <li class="tooltip">2023年8月 応用社会科学RAブートキャンプ参加
+        <span class="tooltiptext">専攻外である経済系の知識を深めるとともに、Rを実践的に用いて分析・考察。</span>
+      </li>
+      <li>2023年11月 さくらサイエンスプログラムTAとしてタイ・インドの学生の指導補助</li>
+      <li class="tooltip">2024年7月 さくらサイエンスプログラムTAとして台湾の学生の指導補助
+        <span class="tooltiptext">Pythonや機械学習の授業運営を補助。</span>
+      </li>
+      <li class="tooltip">2024年8月 東京都市大学塩尻高校　情報の特別授業の指導補助
+        <span class="tooltiptext">高校の授業でICTリテラシー教育を担当。</span>
+      </li>
+      <li class="tooltip">2024年8月 エジプト Egypt-Japan University of Science and Technology主催 2週間サマーキャンプ参加
+        <span class="tooltiptext">国際的な理工系学生との共同プロジェクトに参加。</span>
+      </li>
+      <li class="tooltip">2024年11月 東北大学電気通信研究所 共同プロジェクト 研究合同研究会参加（ポスター発表）
+        <span class="tooltiptext">大学間連携による研究成果の発表を経験。</span>
+      </li>
+      <li class="tooltip">2024年11月 さくらサイエンスプログラムTAとしてタイの学生の指導補助
+        <span class="tooltiptext">再訪型TAとしてタイ学生との継続交流。</span>
+      </li>
+      <li class="tooltip">2025年3月 東京都市大学 情報工学部知能情報工学科国際コース 卒業
+        <span class="tooltiptext">研究と国際活動を両立した学部生活を総括。</span>
+      </li>
+      <li class="tooltip">2025年4月 東京都市大学大学院 総合知工学研究科情報専攻 入学
+        <span class="tooltiptext">AIと社会実装に向けた専門的研究に取り組む。</span>
+      </li>
+      <li class="tooltip">2025年5月 東京都市大学大学院 総合理工学研究科情報専攻　在学中
+        <span class="tooltiptext">修士課程で手書き文字解析とフォント変換の研究を継続中。</span>
+      </li>
     </ul>
 
     <h2>資格</h2>
