--- a/index.html
+++ b/index.html
@@ -35,34 +35,49 @@
     }
 
     /* ツールチップスタイル */
-    .tooltip {
-      position: relative;
-      cursor: help;
-    }
+.tooltip {
+  position: relative;
+  cursor: pointer;
+  color: #1a73e8; /* リンク風の色 */
+}
 
-    .tooltip .tooltiptext {
-      visibility: hidden;
-      background-color: #444;
-      color: #fff;
-      text-align: left;
-      padding: 6px 10px;
-      border-radius: 6px;
-      position: absolute;
-      z-index: 1;
-      bottom: 125%;
-      left: 0;
-      opacity: 0;
-      transition: opacity 0.3s;
-      font-size: 0.85em;
-      line-height: 1.4;
-      max-width: 300px;
-      white-space: normal;
-    }
+.tooltip .tooltiptext {
+  visibility: hidden;
+  background-color: #2c2c2c;
+  color: #fff;
+  text-align: left;
+  padding: 10px 14px;
+  border-radius: 8px;
+  position: absolute;
+  z-index: 10;
+  bottom: 125%;
+  left: 0;
+  opacity: 0;
+  transition: opacity 0.3s;
+  font-size: 0.9em;
+  line-height: 1.6;
+  max-width: 320px;
+  white-space: normal;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+}
 
-    .tooltip:hover .tooltiptext {
-      visibility: visible;
-      opacity: 1;
-    }
+/* 吹き出しの矢印 */
+.tooltip .tooltiptext::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 20px;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #2c2c2c transparent transparent transparent;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+  opacity: 1;
+}
+
   </style>
 </head>
 <body>
