--- a/index.html
+++ b/index.html
@@ -33,57 +33,53 @@
     ul {
       padding-left: 1.2em;
     }
-
-    /* ツールチップスタイル */
-.tooltip {
-  position: relative;
-  cursor: pointer;
-  color: #1a73e8; /* リンク風の色 */
-}
-
-.tooltip .tooltiptext {
-  visibility: hidden;
-  background-color: #2c2c2c;
-  color: #fff;
-  text-align: left;
-  padding: 10px 14px;
-  border-radius: 8px;
-  position: absolute;
-  z-index: 10;
-  bottom: 125%;
-  left: 0;
-  opacity: 0;
-  transition: opacity 0.3s;
-  font-size: 0.9em;
-  line-height: 1.6;
-  max-width: 320px;
-  white-space: normal;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.3);
-}
-
-/* 吹き出しの矢印 */
-.tooltip .tooltiptext::after {
-  content: "";
-  position: absolute;
-  top: 100%;
-  left: 20px;
-  margin-left: -5px;
-  border-width: 5px;
-  border-style: solid;
-  border-color: #2c2c2c transparent transparent transparent;
-}
-
-.tooltip:hover .tooltiptext {
-  visibility: visible;
-  opacity: 1;
-}
-
+    .tooltip {
+      position: relative;
+      cursor: help;
+      color: #1a73e8;
+    }
+    .tooltip .tooltiptext {
+      visibility: hidden;
+      background-color: #2c2c2c;
+      color: #fff;
+      text-align: left;
+      padding: 10px 14px;
+      border-radius: 8px;
+      position: absolute;
+      z-index: 10;
+      bottom: 125%;
+      left: 0;
+      opacity: 0;
+      transition: opacity 0.3s;
+      font-size: 0.9em;
+      line-height: 1.6;
+      max-width: 320px;
+      white-space: normal;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+    }
+    .tooltip .tooltiptext::after {
+      content: "";
+      position: absolute;
+      top: 100%;
+      left: 20px;
+      margin-left: -5px;
+      border-width: 5px;
+      border-style: solid;
+      border-color: #2c2c2c transparent transparent transparent;
+    }
+    .tooltip:hover .tooltiptext {
+      visibility: visible;
+      opacity: 1;
+    }
   </style>
 </head>
 <body>
   <div class="container">
-    <img class="profile" src="https://avatars.githubusercontent.com/u/165368208?v=4" alt="GitHubプロフィール画像" />
     <h1>山田真由</h1>
+    <img class="profile" src="https://avatars.githubusercontent.com/u/165368208?v=4" alt="GitHubプロフィール画像" />
+    
+    <p><a href="en.html">🇬🇧 English Version</a></p>
+
     <h2>基本情報</h2>
     <p>東京都市大学大学院 総合理工学研究科 情報専攻 博士前期課程1年</p>
     <p>産業システム研究室（神野研究室）所属</p>
@@ -92,41 +88,41 @@
     <h2>経歴</h2>
     <ul>
       <li>2018年4月 東京都立戸山高等学校 入学</li>
-      <li>2021年3月 東京都立戸山高等学校　卒業</li>
+      <li>2021年3月 東京都立戸山高等学校 卒業</li>
       <li>2021年4月 東京都市大学 情報工学部知能情報工学科国際コース 入学</li>
-      <li class="tooltip">2022年8月 オーストラリア Edith Cowan University へ4か月間留学
-        <span class="tooltiptext">Social, Cultural and Media Studies, Introductory Applied Mathmatics, Collaborative Design: Designing for Intercultural Experience, Improving English: Reading and Writing, Improving English: Speaking and Listeningを履修し、GPA3.921を取得。課外活動としてSouth West Festival of Japanの書道ブースリーダーとして関わったり、Thomo's Community Gardenへ週１回ボランティアとして農作業に従事。帰国後は成績優秀者として237名中上位7名が貰える「夢に翼を奨学金 留学プログラムアワード」を受賞。</span>
+      <li class="tooltip">🛈 2022年8月 オーストラリア Edith Cowan University へ4か月間留学
+        <span class="tooltiptext">GPA3.921を取得。書道ブースのリーダーや農園でのボランティア活動を行い、「夢に翼を奨学金」受賞。</span>
       </li>
-      <li class="tooltip">2023年2月 紀伊国屋書店タイ支部で1か月間インターンシップ
-        <span class="tooltiptext">営業部に同行して顧客インタビューをしたり、店舗やロジスティクスで実際の業務に従事することで海外進出する日系企業がどう他の企業と差別化しているのか発見した。</span>
+      <li class="tooltip">🛈 2023年2月 紀伊国屋書店タイ支部で1か月間インターンシップ
+        <span class="tooltiptext">営業同行やロジ業務を通じ、日系企業の差別化戦略を実地で学習。</span>
       </li>
-      <li class="tooltip">2023年8月 応用社会科学RAブートキャンプ参加
-        <span class="tooltiptext">専攻外である経済系の知識を深めるとともに、Rを実践的に用いて分析・考察。</span>
+      <li class="tooltip">🛈 2023年8月 応用社会科学RAブートキャンプ参加
+        <span class="tooltiptext">R言語を用いた分析と経済的思考の実践。</span>
       </li>
       <li>2023年11月 さくらサイエンスプログラムTAとしてタイ・インドの学生の指導補助</li>
-      <li class="tooltip">2024年7月 さくらサイエンスプログラムTAとして台湾の学生の指導補助
-        <span class="tooltiptext">Pythonや機械学習の授業運営を補助。</span>
+      <li class="tooltip">🛈 2024年7月 さくらサイエンスプログラムTAとして台湾の学生の指導補助
+        <span class="tooltiptext">Python・機械学習の授業補助を担当。</span>
       </li>
-      <li class="tooltip">2024年8月 東京都市大学塩尻高校　情報の特別授業の指導補助
-        <span class="tooltiptext">高校の授業でICTリテラシー教育を担当。</span>
+      <li class="tooltip">🛈 2024年8月 東京都市大学塩尻高校 情報の特別授業の指導補助
+        <span class="tooltiptext">高校生向けICT授業にて補助・支援を実施。</span>
       </li>
-      <li class="tooltip">2024年8月 エジプト Egypt-Japan University of Science and Technology主催 2週間サマーキャンプ参加
-        <span class="tooltiptext">国際的な理工系学生との共同プロジェクトに参加。</span>
+      <li class="tooltip">🛈 2024年8月 エジプト E-JUST サマーキャンプ参加
+        <span class="tooltiptext">国際的な理工系学生と共同研究活動を経験。</span>
       </li>
-      <li class="tooltip">2024年11月 東北大学電気通信研究所 共同プロジェクト 研究合同研究会参加（ポスター発表）
-        <span class="tooltiptext">大学間連携による研究成果の発表を経験。</span>
+      <li class="tooltip">🛈 2024年11月 東北大学合同研究会（ポスター発表）
+        <span class="tooltiptext">電通研・都市大との合同研究成果を発表。</span>
       </li>
-      <li class="tooltip">2024年11月 さくらサイエンスプログラムTAとしてタイの学生の指導補助
-        <span class="tooltiptext">再訪型TAとしてタイ学生との継続交流。</span>
+      <li class="tooltip">🛈 2024年11月 さくらサイエンスプログラムTAとしてタイの学生の指導補助
+        <span class="tooltiptext">再訪型TAとして継続的な指導を実施。</span>
       </li>
-      <li class="tooltip">2025年3月 東京都市大学 情報工学部知能情報工学科国際コース 卒業
-        <span class="tooltiptext">研究と国際活動を両立した学部生活を総括。</span>
+      <li class="tooltip">🛈 2025年3月 東京都市大学 国際コース 卒業
+        <span class="tooltiptext">研究・国際活動を両立した4年間を修了。</span>
       </li>
-      <li class="tooltip">2025年4月 東京都市大学大学院 総合知工学研究科情報専攻 入学
-        <span class="tooltiptext">AIと社会実装に向けた専門的研究に取り組む。</span>
+      <li class="tooltip">🛈 2025年4月 東京都市大学大学院 総合知工学研究科情報専攻 入学
+        <span class="tooltiptext">AIと社会実装に向けた専門的研究に従事。</span>
       </li>
-      <li class="tooltip">2025年5月 東京都市大学大学院 総合理工学研究科情報専攻　在学中
-        <span class="tooltiptext">修士課程で手書き文字解析とフォント変換の研究を継続中。</span>
+      <li class="tooltip">🛈 2025年5月 東京都市大学大学院 総合理工学研究科情報専攻 在学中
+        <span class="tooltiptext">手書き文字解析・フォント変換の研究を継続中。</span>
       </li>
     </ul>
 
