--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <h1>山田真由</h1>
     <img class="profile" src="https://avatars.githubusercontent.com/u/165368208?v=4" alt="GitHubプロフィール画像" />
     
-    <p><a href="en.html">🇬🇧 English Version</a></p>
+    <p><a href="index_en.html">🇬🇧 English Version</a></p>
 
     <h2>基本情報</h2>
     <p>東京都市大学大学院 総合理工学研究科 情報専攻 博士前期課程1年</p>
