ポップアップ表示いじった

--- a/index.html
+++ b/index.html
@@ -77,8 +77,9 @@
   <div class="container">
     <h1>山田真由</h1>
     <img class="profile" src="https://avatars.githubusercontent.com/u/165368208?v=4" alt="GitHubプロフィール画像" />
-    
-    <p><a href="index_en.html">🇬🇧 English Version</a></p>
+
+    <p><a href="en.html">🇬🇧 English Version</a></p>
+    <p style="color: #555; font-size: 0.9em;">※青色の文字にカーソルを合わせると詳細が表示されます。</p>
 
     <h2>基本情報</h2>
     <p>東京都市大学大学院 総合理工学研究科 情報専攻 博士前期課程1年</p>
@@ -90,38 +91,38 @@
       <li>2018年4月 東京都立戸山高等学校 入学</li>
       <li>2021年3月 東京都立戸山高等学校 卒業</li>
       <li>2021年4月 東京都市大学 情報工学部知能情報工学科国際コース 入学</li>
-      <li class="tooltip">🛈 2022年8月 オーストラリア Edith Cowan University へ4か月間留学
+      <li class="tooltip">2022年8月 オーストラリア Edith Cowan University へ4か月間留学
         <span class="tooltiptext">GPA3.921を取得。書道ブースのリーダーや農園でのボランティア活動を行い、「夢に翼を奨学金」受賞。</span>
       </li>
-      <li class="tooltip">🛈 2023年2月 紀伊国屋書店タイ支部で1か月間インターンシップ
+      <li class="tooltip">2023年2月 紀伊国屋書店タイ支部で1か月間インターンシップ
         <span class="tooltiptext">営業同行やロジ業務を通じ、日系企業の差別化戦略を実地で学習。</span>
       </li>
-      <li class="tooltip">🛈 2023年8月 応用社会科学RAブートキャンプ参加
+      <li class="tooltip">2023年8月 応用社会科学RAブートキャンプ参加
         <span class="tooltiptext">R言語を用いた分析と経済的思考の実践。</span>
       </li>
       <li>2023年11月 さくらサイエンスプログラムTAとしてタイ・インドの学生の指導補助</li>
-      <li class="tooltip">🛈 2024年7月 さくらサイエンスプログラムTAとして台湾の学生の指導補助
+      <li class="tooltip">2024年7月 さくらサイエンスプログラムTAとして台湾の学生の指導補助
         <span class="tooltiptext">Python・機械学習の授業補助を担当。</span>
       </li>
-      <li class="tooltip">🛈 2024年8月 東京都市大学塩尻高校 情報の特別授業の指導補助
+      <li class="tooltip">2024年8月 東京都市大学塩尻高校 情報の特別授業の指導補助
         <span class="tooltiptext">高校生向けICT授業にて補助・支援を実施。</span>
       </li>
-      <li class="tooltip">🛈 2024年8月 エジプト E-JUST サマーキャンプ参加
+      <li class="tooltip">2024年8月 エジプト E-JUST サマーキャンプ参加
         <span class="tooltiptext">国際的な理工系学生と共同研究活動を経験。</span>
       </li>
-      <li class="tooltip">🛈 2024年11月 東北大学合同研究会（ポスター発表）
+      <li class="tooltip">2024年11月 東北大学合同研究会（ポスター発表）
         <span class="tooltiptext">電通研・都市大との合同研究成果を発表。</span>
       </li>
-      <li class="tooltip">🛈 2024年11月 さくらサイエンスプログラムTAとしてタイの学生の指導補助
+      <li class="tooltip">2024年11月 さくらサイエンスプログラムTAとしてタイの学生の指導補助
         <span class="tooltiptext">再訪型TAとして継続的な指導を実施。</span>
       </li>
-      <li class="tooltip">🛈 2025年3月 東京都市大学 国際コース 卒業
+      <li class="tooltip">2025年3月 東京都市大学 国際コース 卒業
         <span class="tooltiptext">研究・国際活動を両立した4年間を修了。</span>
       </li>
-      <li class="tooltip">🛈 2025年4月 東京都市大学大学院 総合知工学研究科情報専攻 入学
+      <li class="tooltip">2025年4月 東京都市大学大学院 総合知工学研究科情報専攻 入学
         <span class="tooltiptext">AIと社会実装に向けた専門的研究に従事。</span>
       </li>
-      <li class="tooltip">🛈 2025年5月 東京都市大学大学院 総合理工学研究科情報専攻 在学中
+      <li class="tooltip">2025年5月 東京都市大学大学院 総合理工学研究科情報専攻 在学中
         <span class="tooltiptext">手書き文字解析・フォント変換の研究を継続中。</span>
       </li>
     </ul>
