--- a/index_en.html
+++ b/index_en.html
@@ -79,48 +79,68 @@
     <img class="profile" src="https://avatars.githubusercontent.com/u/165368208?v=4" alt="GitHub Profile Picture" />
 
     <p><a href="index.html">🇯🇵 日本語版はこちら</a></p>
+    <p style="color: #555; font-size: 0.9em;">* Hover over blue text to see more details.</p>
 
     <h2>Profile</h2>
-    <p>Master’s Student, Department of Information Engineering, Tokyo City University</p>
-    <p>Affiliation: Kamino Laboratory (Industrial Systems)</p>
+    <p>Master’s Student, Graduate School of Science and Engineering, Department of Information, Tokyo City University</p>
+    <p>Member of Industrial Systems Laboratory (Kamino Lab)</p>
     <p>📧 <a href="mailto:g2581460@tcu.ac.jp">g2581460@tcu.ac.jp</a></p>
 
-    <h2>Career</h2>
+    <h2>Education and Experience</h2>
     <ul>
-      <li>Apr. 2018 Enrolled in Tokyo Metropolitan Toyama High School</li>
-      <li>Mar. 2021 Graduated from Toyama High School</li>
-      <li>Apr. 2021 Enrolled in Tokyo City University, International AI Course</li>
-      <li class="tooltip">🛈 Aug. 2022 Exchange at Edith Cowan University, Australia
-        <span class="tooltiptext">Completed 4-month exchange with GPA 3.921. Led a calligraphy booth, volunteered weekly at a community garden, and earned the “Yume ni Tsubasa” Award.</span>
+      <li>Apr. 2018: Entered Toyama High School, Tokyo</li>
+      <li>Mar. 2021: Graduated from Toyama High School</li>
+      <li>Apr. 2021: Enrolled in the International Course, Department of Intelligent Information Engineering, Tokyo City University</li>
+      <li class="tooltip">Aug. 2022: Studied abroad at Edith Cowan University (Australia)
+        <span class="tooltiptext">Took courses in math and intercultural studies. GPA: 3.921. Volunteered weekly at a local farm. Led the calligraphy booth at the Japan Festival. Received a study abroad award.</span>
       </li>
-      <li class="tooltip">🛈 Feb. 2023 Internship at Kinokuniya Bangkok Branch
-        <span class="tooltiptext">Engaged in interviews and logistics, analyzing differentiation of Japanese firms overseas.</span>
+      <li class="tooltip">Feb. 2023: Internship at Kinokuniya Bookstore (Thailand)
+        <span class="tooltiptext">Conducted customer interviews with the sales team and experienced logistics and store operations. Learned how Japanese companies differentiate themselves overseas.</span>
       </li>
-      <li class="tooltip">🛈 Aug. 2023 RA Bootcamp in Applied Social Sciences
-        <span class="tooltiptext">Conducted data analysis with R and learned interdisciplinary research skills.</span>
+      <li class="tooltip">Aug. 2023: Participated in RA Boot Camp on Applied Social Sciences
+        <span class="tooltiptext">Deepened understanding of economics and practiced data analysis using R.</span>
       </li>
-      <li>Nov. 2023 TA for Sakura Science Program (Thailand/India Students)</li>
-      <li class="tooltip">🛈 Jul. 2024 TA for Sakura Science Program (Taiwan Students)
-        <span class="tooltiptext">Assisted in machine learning classes and provided multilingual support.</span>
+      <li>Nov. 2023: TA for Sakura Science Program (assisting Thai and Indian students)</li>
+      <li class="tooltip">Jul. 2024: TA for Sakura Science Program (Taiwan team)
+        <span class="tooltiptext">Assisted in Python and machine learning classes.</span>
       </li>
-      <li class="tooltip">🛈 Aug. 2024 Special Class Assistant, Shiojiri High School
-        <span class="tooltiptext">Supported ICT literacy education for high school students.</span>
+      <li class="tooltip">Aug. 2024: Assistant for ICT class at TCU Shiojiri High School
+        <span class="tooltiptext">Supported teaching of information literacy to high school students.</span>
       </li>
-      <li class="tooltip">🛈 Aug. 2024 Summer Camp at E-JUST, Egypt
-        <span class="tooltiptext">Participated in a two-week international engineering research program.</span>
+      <li class="tooltip">Aug. 2024: Participated in 2-week summer camp at Egypt-Japan University of Science and Technology
+        <span class="tooltiptext">Engaged in international collaborative projects with science students.</span>
       </li>
-      <li class="tooltip">🛈 Nov. 2024 Joint Research Presentation at Tohoku University
-        <span class="tooltiptext">Presented research findings at inter-university event.</span>
+      <li class="tooltip">Nov. 2024: Presented poster at joint research workshop with Tohoku University
+        <span class="tooltiptext">Shared research outcomes through poster presentation.</span>
       </li>
-      <li class="tooltip">🛈 Nov. 2024 TA for Sakura Science Program (Thailand Students)
-        <span class="tooltiptext">Served as a returning TA to support continued collaboration.</span>
+      <li class="tooltip">Nov. 2024: TA for Sakura Science Program (Thailand, revisit)
+        <span class="tooltiptext">Supported students again through the revisit TA program.</span>
       </li>
-      <li class="tooltip">🛈 Mar. 2025 Graduated from Tokyo City University (International AI Course)
-        <span class="tooltiptext">Balanced research and international outreach through 4 years.</span>
+      <li class="tooltip">Mar. 2025: Graduated from Tokyo City University
+        <span class="tooltiptext">Completed undergraduate studies with a focus on research and international activities.</span>
       </li>
-      <li class="tooltip">🛈 Apr. 2025 Enrolled in Master’s Program, Graduate School of Information Science
-        <span class="tooltiptext">Now conducting research in font transformation and handwriting analysis.</span>
+      <li class="tooltip">Apr. 2025: Entered Graduate School of Tokyo City University
+        <span class="tooltiptext">Began master's study on AI and social implementation.</span>
       </li>
+      <li class="tooltip">May 2025: Currently enrolled in Master's Program
+        <span class="tooltiptext">Conducting research on handwritten character analysis and font transformation.</span>
+      </li>
+    </ul>
+
+    <h2>Certifications</h2>
+    <ul>
+      <li>Driver's License (AT limited)</li>
+      <li>TOEIC Listening & Reading: 845</li>
+      <li>IELTS Overall: 5.5 (L: 5.0 / R: 5.5 / W: 6.0 / S: 5.5)</li>
+      <li>Calligraphy License: High-level Instructor (4th Dan)</li>
+    </ul>
+
+    <h2>Hobbies</h2>
+    <ul>
+      <li>Visiting museums and art galleries</li>
+      <li>Exploring World Heritage Sites</li>
+      <li>Opera appreciation</li>
+      <li>Japanese calligraphy</li>
     </ul>
   </div>
 </body>
