--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <h1>山田真由</h1>
     <img class="profile" src="https://avatars.githubusercontent.com/u/165368208?v=4" alt="GitHubプロフィール画像" />
 
-    <p><a href="en.html">🇬🇧 English Version</a></p>
+    <p><a href="index_en.html">🇬🇧 English Version</a></p>
     <p style="color: #555; font-size: 0.9em;">※青色の文字にカーソルを合わせると詳細が表示されます。</p>
 
     <h2>基本情報</h2>
