ポップアップ文面変更

--- a/index.html
+++ b/index.html
@@ -92,38 +92,38 @@
       <li>2021年3月 東京都立戸山高等学校 卒業</li>
       <li>2021年4月 東京都市大学 情報工学部知能情報工学科国際コース 入学</li>
       <li class="tooltip">2022年8月 オーストラリア Edith Cowan University へ4か月間留学
-        <span class="tooltiptext">GPA3.921を取得。書道ブースのリーダーや農園でのボランティア活動を行い、「夢に翼を奨学金」受賞。</span>
+        <span class="tooltiptext">Social, Cultural and Media Studies, Introductory Applied Mathmatics, Collaborative Design: Designing for Intercultural Experience, Inproving English: Reading and Writing, Improving English: Speaking and Listeningを履修し、GPA3.921を取得。課外活動としてSouth West Festival of Japanの書道ブースリーダーとして関わったり、Thomo's Community Gardenへ週１回ボランティアとして農作業に従事。帰国後は成績優秀者として237名中上位7名が貰える「夢に翼を奨学金 留学プログラムアワード」を受賞。</span>
       </li>
       <li class="tooltip">2023年2月 紀伊国屋書店タイ支部で1か月間インターンシップ
-        <span class="tooltiptext">営業同行やロジ業務を通じ、日系企業の差別化戦略を実地で学習。</span>
+        <span class="tooltiptext">営業部に同行して顧客インタビューをしたり、店舗やロジスティクスで実際の業務に従事することで海外進出する日系企業がどう他の企業と差別化しているのか発見した。</span>
       </li>
       <li class="tooltip">2023年8月 応用社会科学RAブートキャンプ参加
-        <span class="tooltiptext">R言語を用いた分析と経済的思考の実践。</span>
+        <span class="tooltiptext">専攻外である経済系の知識を深めるとともに、Rを実践的に用いて分析・考察</span>
       </li>
       <li>2023年11月 さくらサイエンスプログラムTAとしてタイ・インドの学生の指導補助</li>
       <li class="tooltip">2024年7月 さくらサイエンスプログラムTAとして台湾の学生の指導補助
-        <span class="tooltiptext">Python・機械学習の授業補助を担当。</span>
+        <span class="tooltiptext">プログラミングの指導補佐をメインにその後も継続的に会う関係の友人を作ってプライベートでも互いの国を行き来している</span>
       </li>
       <li class="tooltip">2024年8月 東京都市大学塩尻高校 情報の特別授業の指導補助
-        <span class="tooltiptext">高校生向けICT授業にて補助・支援を実施。</span>
+        <span class="tooltiptext">高校3年生へ向けた授業で基礎的なPythonの文法やアルゴリズムを指導</span>
       </li>
-      <li class="tooltip">2024年8月 エジプト E-JUST サマーキャンプ参加
-        <span class="tooltiptext">国際的な理工系学生と共同研究活動を経験。</span>
+      <li class="tooltip">2024年8月 エジプト Egypt-Japan University of Science and Technology主催 サマーキャンプ参加
+        <span class="tooltiptext">アラビア語の入門講座およびエジプト文化の体験をはじめとする文化交流を現地の理工系学生と行なった。</span>
       </li>
       <li class="tooltip">2024年11月 東北大学合同研究会（ポスター発表）
-        <span class="tooltiptext">電通研・都市大との合同研究成果を発表。</span>
+        <span class="tooltiptext">"U-Netベースモデルにおけるフォント変換の調査"というタイトルでフォント変換時の精度向上には畳み込み層を増やすのみではなく損失関数をMSEではなくSSIMという構造も見る指標を用いることで精度が上がることを発表。
+        </span>
       </li>
       <li class="tooltip">2024年11月 さくらサイエンスプログラムTAとしてタイの学生の指導補助
-        <span class="tooltiptext">再訪型TAとして継続的な指導を実施。</span>
       </li>
       <li class="tooltip">2025年3月 東京都市大学 国際コース 卒業
-        <span class="tooltiptext">研究・国際活動を両立した4年間を修了。</span>
+        <span class="tooltiptext">必要単位124に対し、155単位取得しかつ、GPA4.0141と高成績で卒業。席次２位として理事長賞を受賞。</span>
       </li>
       <li class="tooltip">2025年4月 東京都市大学大学院 総合知工学研究科情報専攻 入学
         <span class="tooltiptext">AIと社会実装に向けた専門的研究に従事。</span>
       </li>
       <li class="tooltip">2025年5月 東京都市大学大学院 総合理工学研究科情報専攻 在学中
-        <span class="tooltiptext">手書き文字解析・フォント変換の研究を継続中。</span>
+        <span class="tooltiptext">手書き文字解析の筆致特徴検出、定性的評価を研究している。</span>
       </li>
     </ul>
 
