--- a/index_en.html
+++ b/index_en.html
@@ -82,50 +82,61 @@
     <p style="color: #555; font-size: 0.9em;">* Hover over blue text to see more details.</p>
 
     <h2>Profile</h2>
-    <p>Master’s Student, Graduate School of Science and Engineering, Department of Information, Tokyo City University</p>
-    <p>Member of Industrial Systems Laboratory (Kamino Lab)</p>
+    <p>Infformatics Major, Tokyo City University Graduate School of Integrative Science and Engineering </p>
+    <p>Member of Industrial Systems Laboratory (Jin'no Lab)</p>
     <p>📧 <a href="mailto:g2581460@tcu.ac.jp">g2581460@tcu.ac.jp</a></p>
 
-    <h2>Education and Experience</h2>
-    <ul>
-      <li>Apr. 2018: Entered Toyama High School, Tokyo</li>
-      <li>Mar. 2021: Graduated from Toyama High School</li>
-      <li>Apr. 2021: Enrolled in the International Course, Department of Intelligent Information Engineering, Tokyo City University</li>
-      <li class="tooltip">Aug. 2022: Studied abroad at Edith Cowan University (Australia)
-        <span class="tooltiptext">Took courses in math and intercultural studies. GPA: 3.921. Volunteered weekly at a local farm. Led the calligraphy booth at the Japan Festival. Received a study abroad award.</span>
-      </li>
-      <li class="tooltip">Feb. 2023: Internship at Kinokuniya Bookstore (Thailand)
-        <span class="tooltiptext">Conducted customer interviews with the sales team and experienced logistics and store operations. Learned how Japanese companies differentiate themselves overseas.</span>
-      </li>
-      <li class="tooltip">Aug. 2023: Participated in RA Boot Camp on Applied Social Sciences
-        <span class="tooltiptext">Deepened understanding of economics and practiced data analysis using R.</span>
-      </li>
-      <li>Nov. 2023: TA for Sakura Science Program (assisting Thai and Indian students)</li>
-      <li class="tooltip">Jul. 2024: TA for Sakura Science Program (Taiwan team)
-        <span class="tooltiptext">Assisted in Python and machine learning classes.</span>
-      </li>
-      <li class="tooltip">Aug. 2024: Assistant for ICT class at TCU Shiojiri High School
-        <span class="tooltiptext">Supported teaching of information literacy to high school students.</span>
-      </li>
-      <li class="tooltip">Aug. 2024: Participated in 2-week summer camp at Egypt-Japan University of Science and Technology
-        <span class="tooltiptext">Engaged in international collaborative projects with science students.</span>
-      </li>
-      <li class="tooltip">Nov. 2024: Presented poster at joint research workshop with Tohoku University
-        <span class="tooltiptext">Shared research outcomes through poster presentation.</span>
-      </li>
-      <li class="tooltip">Nov. 2024: TA for Sakura Science Program (Thailand, revisit)
-        <span class="tooltiptext">Supported students again through the revisit TA program.</span>
-      </li>
-      <li class="tooltip">Mar. 2025: Graduated from Tokyo City University
-        <span class="tooltiptext">Completed undergraduate studies with a focus on research and international activities.</span>
-      </li>
-      <li class="tooltip">Apr. 2025: Entered Graduate School of Tokyo City University
-        <span class="tooltiptext">Began master's study on AI and social implementation.</span>
-      </li>
-      <li class="tooltip">May 2025: Currently enrolled in Master's Program
-        <span class="tooltiptext">Conducting research on handwritten character analysis and font transformation.</span>
-      </li>
-    </ul>
+    <h2>Career</h2>
+<ul>
+  <li>Apr. 2018 Enrolled in Tokyo Metropolitan Toyama High School</li>
+  <li>Mar. 2021 Graduated from Tokyo Metropolitan Toyama High School</li>
+  <li>Apr. 2021 Enrolled in the International Course, Department of Intelligent Information Engineering, Tokyo City University</li>
+
+  <li class="tooltip">Aug. 2022 Studied abroad for 4 months at Edith Cowan University, Australia
+    <span class="tooltiptext">Took courses such as Social, Cultural and Media Studies, Introductory Applied Mathematics, Collaborative Design: Designing for Intercultural Experience, Improving English: Reading and Writing, and Improving English: Speaking and Listening. Achieved GPA 3.921. Outside of class, served as the calligraphy booth leader at the South West Festival of Japan and volunteered weekly at Thomo's Community Garden. After returning to Japan, received the “Yume ni Tsubasa Scholarship Award” for top 7 out of 237 students.</span>
+  </li>
+
+  <li class="tooltip">Feb. 2023 1-month internship at Kinokuniya Thai Branch
+    <span class="tooltiptext">Joined the sales department to conduct customer interviews and engaged in actual operations at stores and logistics sites to explore how Japanese companies differentiate themselves when expanding overseas.</span>
+  </li>
+
+  <li class="tooltip">Aug. 2023 Participated in the Applied Social Science RA Bootcamp
+    <span class="tooltiptext">Deepened understanding of economics (outside her major) and conducted analysis and interpretation using R in a practical context.</span>
+  </li>
+
+  <li>Nov. 2023 Teaching Assistant for Sakura Science Program (Thailand & India students)</li>
+
+  <li class="tooltip">Jul. 2024 Teaching Assistant for Sakura Science Program (Taiwan students)
+    <span class="tooltiptext">Mainly assisted in teaching programming, built ongoing friendships that led to mutual visits between countries beyond the program.</span>
+  </li>
+
+  <li class="tooltip">Aug. 2024 Teaching Assistant for ICT literacy class at TCU Shiojiri High School
+    <span class="tooltiptext">Taught Python basics and algorithm design to high school seniors as part of an outreach program.</span>
+  </li>
+
+  <li class="tooltip">Aug. 2024 Participated in a two-week summer camp hosted by Egypt-Japan University of Science and Technology
+    <span class="tooltiptext">Engaged in cultural exchange with local science and engineering students, including an introduction to Arabic and immersive experiences of Egyptian culture.</span>
+  </li>
+
+  <li class="tooltip">Nov. 2024 Presented a poster at the Tohoku University Joint Research Symposium
+    <span class="tooltiptext">Presented research titled “Investigation of Font Transformation Using U-Net Based Models,” demonstrating that using SSIM, a structure-aware loss function, instead of MSE, leads to significant improvements in transformation accuracy—not just by increasing convolutional layers.</span>
+  </li>
+
+  <li class="tooltip">Nov. 2024 Teaching Assistant for Sakura Science Program (Thailand students)</li>
+
+  <li class="tooltip">Mar. 2025 Graduated from the International Course, Tokyo City University
+    <span class="tooltiptext">Earned 155 credits (required: 124) with a GPA of 4.0141. Graduated with the second-highest GPA in the department and received the President's Award.</span>
+  </li>
+
+  <li class="tooltip">Apr. 2025 Enrolled in the Graduate School of Integrated Science and Engineering, Major in Information Engineering, Tokyo City University
+    <span class="tooltiptext">Conducting specialized research on AI and its implementation in real-world society.</span>
+  </li>
+
+  <li class="tooltip">May. 2025 Currently enrolled in the Master's Program in Information Engineering, Tokyo City University Graduate School
+    <span class="tooltiptext">Researching stroke feature detection and qualitative evaluation of handwritten characters.</span>
+  </li>
+</ul>
+
 
     <h2>Certifications</h2>
     <ul>
