--- a/index.html
+++ b/index.html
@@ -110,18 +110,15 @@
       <li class="tooltip">2024年8月 エジプト Egypt-Japan University of Science and Technology主催 サマーキャンプ参加
         <span class="tooltiptext">アラビア語の入門講座およびエジプト文化の体験をはじめとする文化交流を現地の理工系学生と行なった。</span>
       </li>
-      <li class="tooltip">2024年11月 東北大学合同研究会（ポスター発表）
+      <li class="tooltip">2024年11月 東北大学電気通信研究所 共同プロジェクト 研究合同研究会参加（ポスター発表）
         <span class="tooltiptext">"U-Netベースモデルにおけるフォント変換の調査"というタイトルでフォント変換時の精度向上には畳み込み層を増やすのみではなく損失関数をMSEではなくSSIMという構造も見る指標を用いることで精度が上がることを発表。
         </span>
       </li>
-      <li class="tooltip">2024年11月 さくらサイエンスプログラムTAとしてタイの学生の指導補助
-      </li>
+      <li>2024年11月 さくらサイエンスプログラムTAとしてタイの学生の指導補助</li>
       <li class="tooltip">2025年3月 東京都市大学 国際コース 卒業
         <span class="tooltiptext">必要単位124に対し、155単位取得しかつ、GPA4.0141と高成績で卒業。席次２位として理事長賞を受賞。</span>
       </li>
-      <li class="tooltip">2025年4月 東京都市大学大学院 総合知工学研究科情報専攻 入学
-        <span class="tooltiptext">AIと社会実装に向けた専門的研究に従事。</span>
-      </li>
+      <li>2025年4月 東京都市大学大学院 総合知工学研究科情報専攻 入学</li>
       <li class="tooltip">2025年5月 東京都市大学大学院 総合理工学研究科情報専攻 在学中
         <span class="tooltiptext">手書き文字解析の筆致特徴検出、定性的評価を研究している。</span>
       </li>
