--- a/index_en.html
+++ b/index_en.html
@@ -122,15 +122,13 @@
     <span class="tooltiptext">Presented research titled “Investigation of Font Transformation Using U-Net Based Models,” demonstrating that using SSIM, a structure-aware loss function, instead of MSE, leads to significant improvements in transformation accuracy—not just by increasing convolutional layers.</span>
   </li>
 
-  <li class="tooltip">Nov. 2024 Teaching Assistant for Sakura Science Program (Thailand students)</li>
+  <li>Nov. 2024 Teaching Assistant for Sakura Science Program (Thailand students)</li>
 
   <li class="tooltip">Mar. 2025 Graduated from the International Course, Tokyo City University
     <span class="tooltiptext">Earned 155 credits (required: 124) with a GPA of 4.0141. Graduated with the second-highest GPA in the department and received the President's Award.</span>
   </li>
 
-  <li class="tooltip">Apr. 2025 Enrolled in the Graduate School of Integrated Science and Engineering, Major in Information Engineering, Tokyo City University
-    <span class="tooltiptext">Conducting specialized research on AI and its implementation in real-world society.</span>
-  </li>
+  <li>Apr. 2025 Enrolled in the Graduate School of Integrated Science and Engineering, Major in Information Engineering, Tokyo City University</li>
 
   <li class="tooltip">May. 2025 Currently enrolled in the Master's Program in Information Engineering, Tokyo City University Graduate School
     <span class="tooltiptext">Researching stroke feature detection and qualitative evaluation of handwritten characters.</span>
